--- a/client/src/scss/site.scss
+++ b/client/src/scss/site.scss
@@ -1,9 +1,1 @@
-$font-stack: Helvetica, sans-serif;
-$primary-color: #333;
-
-body {
-    font: 100% $font-stack;
-    color: $primary-color;
-
-    background-color: black;
-}
+@import 'bootstrap';
