--- a/leaderboard/apps/home/templates/includes/nav.html
+++ b/leaderboard/apps/home/templates/includes/nav.html
@@ -1,46 +1,24 @@
 <nav id="sidebar">
     <div class="sidebar-header">
-        <h3>Bootstrap Sidebar</h3>
+        <h3>Leaderboard</h3>
     </div>
 
     <ul class="list-unstyled components">
-        <p>Dummy Heading</p>
         <li class="active">
-            <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-            <ul class="collapse list-unstyled" id="homeSubmenu">
-                <li>
-                    <a href="#">Home 1</a>
-                </li>
-                <li>
-                    <a href="#">Home 2</a>
-                </li>
-                <li>
-                    <a href="#">Home 3</a>
-                </li>
-            </ul>
+            <a href="#homeSubmenu"><i class="fa fa-2x fas fa-home"></i>&MediumSpace;&MediumSpace;Home</a>
         </li>
         <li>
-            <a href="#">About</a>
+            <a href="#"><i class="fa fa-2x fas fa-search"></i>&MediumSpace;&MediumSpace;Browse Boards</a>
         </li>
+    </ul>
+    <ul class="list-unstyled components">
         <li>
-            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
+            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"><i class="fa fa-2x fas fa-user-circle"></i>&MediumSpace;&MediumSpace;Pages</a>
             <ul class="collapse list-unstyled" id="pageSubmenu">
                 <li>
                     <a href="#">Page 1</a>
                 </li>
-                <li>
-                    <a href="#">Page 2</a>
-                </li>
-                <li>
-                    <a href="#">Page 3</a>
-                </li>
             </ul>
-        </li>
-        <li>
-            <a href="#">Portfolio</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
         </li>
     </ul>
 </nav>
