--- a/leaderboard/apps/home/templates/includes/nav_toggle.html
+++ b/leaderboard/apps/home/templates/includes/nav_toggle.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
 
         <button type="button" id="sidebarCollapse" class="btn btn-info">
-            <i class="fas fa-chevron-right"></i>
+            <i class="fa fas fa-chevron-right"></i>
             <span>Toggle Sidebar</span>
         </button>
 
