--- a/client/src/scss/site.scss
+++ b/client/src/scss/site.scss
@@ -1,5 +1,5 @@
 @import 'bootstrap';
-@import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '@fortawesome/fontawesome-free/css/all.css';
 
 .wrapper {
     display: flex;
@@ -10,10 +10,11 @@
     min-width: 250px;
     max-width: 250px;
     min-height: 100vh;
+    margin-left: -250px;
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: 0px;
 }
 
 a[data-toggle='collapse'] {
@@ -65,12 +66,12 @@ a:focus {
 }
 
 #sidebar .sidebar-header {
+    @extend .float-right;
     padding: 20px;
     background: #6d7fcc;
 }
 
 #sidebar ul.components {
-    padding: 20px 0;
     border-bottom: 1px solid #47748b;
 }
 
