--- a/leaderboard/apps/home/templates/home/includes/index.html
+++ b/leaderboard/apps/home/templates/home/includes/index.html
@@ -1,2 +1,3 @@
 Hello world
-{% if loaded %}HELLO AGAIN {{data|length}}{% endif %}
+{% if loaded %}
+          <i class="fas fa-home"></i>HELLO AGAIN {{data|length}}{% endif %}
