--- a/client/src/scss/site.scss
+++ b/client/src/scss/site.scss
@@ -1,102 +1,12 @@
-@import 'bootstrap';
-@import '@fortawesome/fontawesome-free/css/all.css';
+@import 'bootstrap/scss/bootstrap-grid';
+@import './font-prompt-v4-latin.scss';
+@import 'nav';
 
-.wrapper {
-    display: flex;
-    align-items: stretch;
-}
-
-#sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    min-height: 100vh;
-    margin-left: -250px;
+:root {
+  font-family: 'Prompt', sans-serif;
+  font-size: 16px;
 }
 
-#sidebar.active {
-    margin-left: 0px;
-}
-
-a[data-toggle='collapse'] {
-    position: relative;
-}
-
-.dropdown-toggle::after {
-    display: block;
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-}
-
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -250px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-}
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
-
-p {
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1em;
-    font-weight: 300;
-    line-height: 1.7em;
-    color: #999;
-}
-
-a,
-a:hover,
-a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-#sidebar {
-    /* don't forget to add all the previously mentioned styles here too */
-    background: #7386d5;
-    color: #fff;
-    transition: all 0.3s;
-}
-
-#sidebar .sidebar-header {
-    @extend .float-right;
-    padding: 20px;
-    background: #6d7fcc;
-}
-
-#sidebar ul.components {
-    border-bottom: 1px solid #47748b;
-}
-
-#sidebar ul p {
-    color: #fff;
-    padding: 10px;
-}
-
-#sidebar ul li a {
-    padding: 10px;
-    font-size: 1.1em;
-    display: block;
-}
-#sidebar ul li a:hover {
-    color: #7386d5;
-    background: #fff;
-}
-
-#sidebar ul li.active > a,
-a[aria-expanded='true'] {
-    color: #fff;
-    background: #6d7fcc;
-}
-ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
-    background: #6d7fcc;
+#content {
+  margin-left: 5rem;
 }
