--- a/leaderboard/apps/home/templates/includes/nav.html
+++ b/leaderboard/apps/home/templates/includes/nav.html
@@ -2,7 +2,7 @@
     <ul class="navbar-nav">
       <li class="logo">
         <a href="#" class="nav-link">
-          <span class="link-text logo-text">Fireship</span>
+          <span class="link-text logo-text">Leaderboard</span>
           {% include 'icons/angle-right-solid.svg' %}
         </a>
       </li>
