--- a/leaderboard/apps/home/templates/includes/nav.html
+++ b/leaderboard/apps/home/templates/includes/nav.html
@@ -14,6 +14,21 @@
         </a>
       </li>
 
+      <li class="nav-item dropdown">
+        <a href="#" class="nav-link">
+          {% include 'icons/user-solid.svg' %}
+          <span class="link-text">My Profile</span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#"><span class="link-text">Action</span></a>
+          <a class="dropdown-item" href="#"><span class="link-text">Action</span></a>
+          <a class="dropdown-item" href="#"><span class="link-text">Action</span></a>
+          <a class="dropdown-item" href="#"><span class="link-text">Action</span></a>
+          <a class="dropdown-item" href="#"><span class="link-text">Action</span></a>
+          <a class="dropdown-item" href="#"><span class="link-text">Action</span></a>
+        </div>
+      </li>
+
       <li class="nav-item">
         <a href="#" class="nav-link">
           {% include 'icons/search-solid.svg' %}
@@ -25,13 +40,6 @@
         <a href="#" class="nav-link">
           {% include 'icons/users-solid.svg' %}
           <span class="link-text">Browse Users</span>
-        </a>
-      </li>
-
-      <li class="nav-item">
-        <a href="#" class="nav-link">
-          {% include 'icons/user-solid.svg' %}
-          <span class="link-text">My Profile</span>
         </a>
       </li>
     </ul>
