--- a/client/src/scss/nav.scss
+++ b/client/src/scss/nav.scss
@@ -38,6 +38,8 @@ main {
 }
 
 .nav-item {
+  position: relative;
+  z-index: 1;
   width: 100%;
 }
 
@@ -47,21 +49,54 @@ main {
   height: 5rem;
   color: var(--text-primary);
   text-decoration: none;
-  filter: grayscale(100%) opacity(0.7);
   transition: var(--transition-speed);
 }
 
+.link-icon,
+.logo-icon,
+.collapse-icon {
+  svg {
+    filter: grayscale(100%) opacity(0.7);
+    transition: var(--transition-speed);
+  }
+}
+
 .nav-link:hover {
-  filter: grayscale(0%) opacity(1);
   background: var(--bg-secondary);
   color: var(--text-secondary);
+
+  .link-icon {
+    background-color: var(--bg-secondary);
+  }
+
+  .link-icon,
+  .logo-icon,
+  .collapse-icon {
+    svg {
+      filter: grayscale(0%) opacity(1);
+    }
+  }
 }
 
 .link-text {
   position: relative;
   left: -999;
+  z-index: 0;
   white-space: nowrap;
   margin-left: 1rem;
+  transition: var(--transition-speed);
+}
+
+.link-icon {
+  position: relative;
+  z-index: 1;
+  transition: var(--transition-speed);
+  background-color: var(--bg-primary);
+}
+
+.collapse-icon {
+  position: relative;
+  left: -999;
   transition: var(--transition-speed);
 }
 
@@ -109,12 +144,13 @@ svg path {
 
 /* Sub navs */
 .nav-item.dropdown {
+  z-index: 2;
   overflow: visible;
 
   &:hover {
     .dropdown-menu {
       height: 100%;
-      left: 4rem;
+      left: 5rem;
     }
   }
 
@@ -122,9 +158,11 @@ svg path {
     background-color: var(--bg-tertiary);
     // display: flex;
     flex-direction: column;
-    position: relative;
+    position: absolute;
+    width: 100%;
     height: 0;
     left: 0;
+    z-index: 1000;
     overflow: hidden;
     transition: var(--transition-speed);
 
@@ -185,8 +223,16 @@ svg path {
     width: 16rem;
   }
 
-  .navbar:hover .link-text {
-    left: 0;
+  .navbar:hover {
+    .link-text,
+    .collapse-icon {
+      left: 0;
+    }
+    .logo-icon {
+      svg {
+        filter: grayscale(0%) opacity(1);
+      }
+    }
   }
 
   .navbar:hover .logo svg {
