--- a/client/src/scss/nav.scss
+++ b/client/src/scss/nav.scss
@@ -149,7 +149,7 @@ svg path {
 
   &:hover {
     .dropdown-menu {
-      height: 100%;
+      max-height: 100vh;
       left: 5rem;
     }
   }
@@ -160,7 +160,7 @@ svg path {
     flex-direction: column;
     position: absolute;
     width: 100%;
-    height: 0;
+    max-height: 0;
     left: 0;
     z-index: 1000;
     overflow: hidden;
