--- a/client/src/scss/nav.scss
+++ b/client/src/scss/nav.scss
@@ -8,6 +8,11 @@
   --transition-speed: 250ms;
 }
 
+#content {
+  margin-left: unset;
+  margin-left: 5rem;
+}
+
 body {
   color: black;
   background-color: white;
@@ -25,6 +30,10 @@ main {
   position: fixed;
   background-color: var(--bg-primary);
   transition: width var(--transition-speed) ease;
+
+  top: 0;
+  width: 5rem;
+  height: 100vh;
 }
 
 .navbar-nav {
@@ -138,8 +147,27 @@ svg path {
   transition: var(--transition-speed);
 }
 
+.navbar:hover {
+  width: 16rem;
+
+  .logo-text {
+    left: 0px;
+  }
+
+  .link-text,
+  .collapse-icon {
+    left: 0;
+  }
+  .logo-icon {
+    svg {
+      filter: grayscale(0%) opacity(1);
+    }
+  }
+}
+
 .navbar:hover .logo svg {
   transform: rotate(-180deg);
+  margin-left: 11rem;
 }
 
 // to be added via javascript to elements that are in the process of transitioning. This
@@ -184,76 +212,14 @@ svg path {
   }
 }
 
-/* Small screens */
+// small screens
 @media only screen and (max-width: 600px) {
   .navbar {
-    bottom: 0;
-    width: 100vw;
-    height: 5rem;
-  }
+    left: -5rem;
 
-  .link-text {
-    display: none;
-  }
-
-  .logo {
-    display: none;
-  }
-
-  .navbar-nav {
-    flex-direction: row;
-  }
-
-  .nav-link {
-    justify-content: center;
-  }
-
-  main {
-    margin: 0;
-  }
-
-  .collapse-icon {
-    display: none;
-  }
-}
-
-#content {
-  margin-left: unset;
-}
-
-/* Large screens */
-@media only screen and (min-width: 600px) {
-  #content {
-    margin-left: 5rem;
-  }
-
-  .navbar {
-    top: 0;
-    width: 5rem;
-    height: 100vh;
-  }
-
-  .navbar:hover {
-    width: 16rem;
-  }
-
-  .navbar:hover {
-    .link-text,
-    .collapse-icon {
-      left: 0;
+    .logo {
+      position: relative;
+      left: 5rem;
     }
-    .logo-icon {
-      svg {
-        filter: grayscale(0%) opacity(1);
-      }
-    }
-  }
-
-  .navbar:hover .logo svg {
-    margin-left: 11rem;
-  }
-
-  .navbar:hover .logo-text {
-    left: 0px;
   }
 }
